# tech-news-digest-bot

./: .env.example  .gitignore  Makefile  README.md  SETUP_COMPLETE.md  SUMMARY.md  pyproject.toml  run_bot.sh
.github/workflows/: neo4j-backup.yml
docs/: GROQ_SETUP.md  TEST_UPDATES.md  architecture.md  openclaw-integration.md  project-structure.md  quickstart.md
openclaw/skills/: devto-trending.js  github-trending.js  hackernews-scraper.js
openclaw/workflows/: daily-digest-workflow.js  topic-monitor-workflow.js
scripts/: README.md  backup_neo4j.py  init_neo4j.py  restore_neo4j.py  setup_openclaw.sh  test_bot_groq.py  test_integration.py
src/tech_digest_bot/: __init__.py  __main__.py  container.py  exceptions.py
src/tech_digest_bot/ai/: __init__.py  agent.py  llm.py  research.py
src/tech_digest_bot/ai/tools/: __init__.py  base.py  graph_explore.py  graph_search.py  web_search.py
src/tech_digest_bot/bot/: __init__.py  app.py  conversation_store.py  handlers.py
src/tech_digest_bot/config/: __init__.py  constants.py  settings.py
src/tech_digest_bot/graph/: __init__.py  graph_queries.py  neo4j_store.py
src/tech_digest_bot/models/: __init__.py  types.py
src/tech_digest_bot/prompts/: __init__.py  loader.py
src/tech_digest_bot/prompts/templates/: agent_synthesis.jinja2  agent_system.jinja2  digest_generation.jinja2  followup_answer.jinja2  topic_extraction.jinja2
src/tech_digest_bot/search/: __init__.py  duckduckgo.py  openclaw.py  openclaw_cli.py
tests/: __init__.py  conftest.py  test_config.py
tests/unit/: test_settings.py
